--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,27 +1,38 @@
-name: pytest
+name: Codecov coverage report
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ['*']
+  pull_request:
+    branches: ['*']
 
 jobs:
   test:
-    name: Run tests and collect coverage
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Check out code
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install pytest pytest-cov
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov codecov
 
-      - name: Run tests
-        run: pytest --cov
+      - name: Run tests with coverage
+        continue-on-error: true  # Continue even if some tests fail
+        run: |
+          pytest --cov=your_package_name
 
-      - name: Upload results to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage to Codecov
+        if: always()  # Ensure this step runs even if tests fail
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: |
+          codecov
